@@ -42,8 +42,34 @@ public class FingeringGeneratorEditor : Editor
 
 		EditorGUILayout.Space();
 
+		// Hands
+		{
+			EditorGUI.BeginChangeCheck();
+
+			EditorGUILayout.PropertyField(serializedObject.FindProperty("Hands"), true);
+
+			if (EditorGUI.EndChangeCheck())
+				serializedObject.ApplyModifiedProperties();
+		}
+
+		// TrackHandIndices
+		{
+			EditorGUILayout.LabelField("TrackHandIndices");
+
+			EditorGUI.indentLevel++;
+
+			for (int i = 0; i < t.TrackHandIndices.Length; ++i)
+			{
+				t.TrackHandIndices[i] = EditorGUILayout.IntField("Track " + i.ToString(), t.TrackHandIndices[i]);
+			}
+
+			EditorGUI.indentLevel--;
+		}
+
+		EditorGUILayout.Space();
+
 		TargetName = EditorGUILayout.TextField("Target File Name", TargetName);
-		if(TargetName == "" && t.SourceAsset)
+		if (TargetName == "" && t.SourceAsset)
 			TargetName = string.Format("fingering {0}", t.SourceAsset.name);
 
 		if (GUILayout.Button("Generate"))
