@@ -126,7 +126,11 @@ MonoBehaviour:
   m_Script: {fileID: 11500000, guid: a8bd8fc69e5eb0d42a60af3640eeb4e8, type: 3}
   m_Name: 
   m_EditorClassIdentifier: 
-  SourceAsset: {fileID: 0}
+  SourceAsset: {fileID: 4900000, guid: f294e6d8eac06d24f81a229fca3fbf22, type: 3}
+  Hands:
+  - Config: Config
+    Type: 0
+  TrackHandIndices: ffffffff0000000000000000
 --- !u!114 &836143163
 MonoBehaviour:
   m_ObjectHideFlags: 0
