@@ -1,20 +1,71 @@
 ﻿using UnityEngine;
+using System;
 using System.IO;
+using System.Collections.Generic;
+
+using Regex = System.Text.RegularExpressions.Regex;
+using Random = UnityEngine.Random;
 using Midi = Sanford.Multimedia.Midi;
+using Pianist;
 
 
 [ExecuteInEditMode]
 [RequireComponent(typeof(HandConfigLibrary))]
 public class FingeringGenerator : MonoBehaviour
 {
+	HandConfigLibrary HandConfigLib;
+
 	public TextAsset SourceAsset;
 	public Midi.Sequence MidiSeq;
 
 	static readonly string MidiSignatureText = "Fingering by K.L.Pianist, fingering-marker-pattern:finger:(\\d+)\\|([\\d,-]+)";
 
 
+	[System.Serializable]
+	public class Hand
+	{
+		public string Config;
+		public SolveHandType Type;
+	}
+
+	public Hand[] Hands;
+
+	public int[] TrackHandIndices;
+
+	public Dictionary<int, int[]> HandTracksMap
+	{
+		get
+		{
+			Dictionary<int, int[]> map = new Dictionary<int, int[]>();
+
+			for (int i = 0; i < TrackHandIndices.Length; ++i)
+			{
+				int index = TrackHandIndices[i];
+				if (index >= 0)
+				{
+					if(!map.ContainsKey(index))
+						map[index] = new int[0];
+
+					int[] list = map[index];
+
+					Array.Resize(ref list, map[index].Length + 1);
+					list[list.Length - 1] = i;
+
+					map[index] = list;
+				}
+			}
+
+			return map;
+		}
+	}
+
+	FingeringNavigator Navigator = new FingeringNavigator();
+
+
 	void Start ()
 	{
+		HandConfigLib = GetComponent<HandConfigLibrary>();
+
 		if (SourceAsset)
 			load();
 	}
@@ -33,6 +84,8 @@ public class FingeringGenerator : MonoBehaviour
 
 		MidiSeq = new Midi.Sequence();
 		MidiSeq.Load(stream);
+
+		TrackHandIndices = new int[MidiSeq.Count];
 	}
 
 	public void generate(string fileName)
@@ -40,7 +93,7 @@ public class FingeringGenerator : MonoBehaviour
 		if (MidiSeq == null)
 			load();
 
-		run(MidiSeq);
+		run();
 
 		FileStream file = new FileStream(fileName, FileMode.OpenOrCreate);
 		MidiSeq.Save(file);
@@ -49,9 +102,12 @@ public class FingeringGenerator : MonoBehaviour
 		Debug.Log("MIDI file saved: " + fileName);
 	}
 
-	public static void clear(Midi.Sequence seq)
+	public void clear()
 	{
-		foreach (Midi.Track track in seq)
+		Regex signaturePattern = new Regex("^Fingering");
+		Regex fingerPattern = new Regex("^finger:");
+
+		foreach (Midi.Track track in MidiSeq)
 		{
 			System.Collections.Generic.List<int> toRemove = new System.Collections.Generic.List<int>();
 
@@ -65,12 +121,12 @@ public class FingeringGenerator : MonoBehaviour
 					switch (msg.MetaType)
 					{
 						case Midi.MetaType.Text:
-							if (new System.Text.RegularExpressions.Regex("^Fingering").Match(System.Text.Encoding.Default.GetString(msg.GetBytes())).Length > 0)
+							if (signaturePattern.Match(System.Text.Encoding.Default.GetString(msg.GetBytes())).Length > 0)
 								toRemove.Add(i);
 
 							break;
 						case Midi.MetaType.Marker:
-							if (new System.Text.RegularExpressions.Regex("^finger:").Match(System.Text.Encoding.Default.GetString(msg.GetBytes())).Length > 0)
+							if (fingerPattern.Match(System.Text.Encoding.Default.GetString(msg.GetBytes())).Length > 0)
 								toRemove.Add(i);
 
 							break;
@@ -83,19 +139,56 @@ public class FingeringGenerator : MonoBehaviour
 		}
 	}
 
-	public static void run(Midi.Sequence seq)
+	public void run()
 	{
-		if (seq.Count == 0)
+		if (MidiSeq.Count == 0)
 		{
 			Debug.LogWarning("MIDI no track found.");
 			return;
 		}
 
-		clear(seq);
+		clear();
 
-		seq[0].Insert(0, new Midi.MetaMessage(Midi.MetaType.Text, System.Text.Encoding.Default.GetBytes(MidiSignatureText)));
+		MidiSeq[0].Insert(0, new Midi.MetaMessage(Midi.MetaType.Text, System.Text.Encoding.Default.GetBytes(MidiSignatureText)));
 
-		foreach (Midi.Track track in seq)
+		NotationTrack[] notation = NotationUtils.parseMidiFile(MidiSeq);
+
+		var trackMap = HandTracksMap;
+		Fingering[] results = new Fingering[trackMap.Count];
+		int resultIndex = 0;
+
+		foreach (var pair in trackMap)
+		{
+			if (pair.Key >= Hands.Length)
+			{
+				Debug.LogErrorFormat("Hand index {0} out of hand config range.", pair.Key);
+				return;
+			}
+
+			Hand hand = Hands[pair.Key];
+
+			int[] trackList = pair.Value;
+
+			NotationTrack[] tracks = new NotationTrack[trackList.Length];
+			for(int track = 0; track < trackList.Length; ++track)
+				tracks[track] = notation[track];
+
+			Navigator.Track = NotationTrack.merge(tracks);
+			Navigator.Config = HandConfigLib.getConfig(hand.Config);
+
+			if (Navigator.Config == null)
+			{
+				Debug.LogErrorFormat("Hand config of {0} is null.", hand.Config);
+				return;
+			}
+
+			Navigator.HandType = hand.Type;
+
+			results[resultIndex++] = Navigator.run();
+		}
+
+		NotationUtils.appendFingeringToMidiFile(MidiSeq, results);
+		/*foreach (Midi.Track track in MidiSeq)
 		{
 			foreach(Midi.MidiEvent e in track.Iterator())
 			{
@@ -114,6 +207,6 @@ public class FingeringGenerator : MonoBehaviour
 					}
 				}
 			}
-		}
+		}*/
 	}
 }
